tests/toylang/neg/001280_mutation.toylang
program a = { then a do sleep; } .
